# BallPit

./: .gitattributes  .gitignore  Ball Pit.jucer  BallPitHostPreset.filtergraph  CMakeLists.txt  README.md  Structure.txt  juce_Slider.cpp  juce_Slider.h
.github/workflows/: build.yml  build_and_test.yml
BallPit_artefacts/Release/VST3/Ball Pit.vst3/Contents/: Info.plist
BallPit_artefacts/Release/VST3/Ball Pit.vst3/Contents/Resources/: moduleinfo.json
BallPit_artefacts/Release/VST3/Ball Pit.vst3/Contents/_CodeSignature/: CodeResources
Builds/VisualStudio2022/: Ball Pit.sln  Ball Pit_SharedCode.vcxproj  Ball Pit_SharedCode.vcxproj.filters  Ball Pit_StandalonePlugin.vcxproj  Ball Pit_VST3.vcxproj  Ball Pit_VST3ManifestHelper.vcxproj  resources.rc
Builds/VisualStudio2022/x64/Debug/Shared Code/: std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
Builds/VisualStudio2022/x64/Debug/VST3/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json.command
Builds/VisualStudio2022/x64/Debug/VST3 Manifest Helper/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Presets/: 3_wave.preset  Dance Of Fire.preset  DanceOfFire.preset  Dance_Of_Fire.preset  Default.preset  Drip Drop.preset  DripDrop.preset  Drip_drop.preset  Harpeggio.preset  Init.preset  Juggling.preset  Master Card.preset  MasterCard.preset  Master_card.preset  OvalGalaxy.preset  Polyrythm 1.preset  Polyrythm 2.preset  Polyrythm.preset  Polyrythm_1.preset  Shuffle Hussle.preset  ShuffleHussle.preset  Shuffle_hussle.preset  Stress Timer.preset  StressTimer.preset  Stress_Timer.preset  Total Chaos.preset  TotalChaos.preset  Total_chaos.preset  Wiggling Snake.preset  WigglingSnake.preset  Wiggling_snake.preset
Source/: Ball.cpp  Ball.h  Configs.cpp  Configs.h  CostumeComboBox.cpp  CostumeComboBox.h  CostumeDelaySliders.cpp  CostumeDelaySliders.h  CostumeDial.cpp  CostumeDial.h  CostumeLogger.h  CostumeToggleButton.cpp  CostumeToggleButton.h  Edge.cpp  Edge.h  EdgeEventListener.h  MyCostumeDial.cpp  MyCostumeDial.h  Pit.cpp  Pit.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManagerBackend.cpp  PresetManagerBackend.h  PresetManagerGUI.h  Scales.cpp  Scales.h  TempoManager.cpp  TempoManager.h
